Finally got that image to show after I added a viewBox. Added some padding to the columns and the row in the Region Select

--- a/css/custom-styles.css
+++ b/css/custom-styles.css
@@ -22,3 +22,14 @@
 .jumbotron {
 	padding-top: 200px;
 }
+
+/* Images
+========================= */
+
+.regionColumns {
+	padding-bottom: 5px;
+}
+
+.regionRow {
+	padding-bottom: 40px;
+}
