Fussing with colors on the index. changed to bootstrap.css, will minify later.

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -4103,7 +4103,7 @@ fieldset[disabled] .navbar-inverse .btn-link:focus {
   padding-bottom: 30px;
   margin-bottom: 30px;
   color: #ffffff;
-  background-color: #a085c6;
+  background-color: olivedrab;
 }
 .jumbotron h1,
 .jumbotron .h1 {
