--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -4263,7 +4263,7 @@ fieldset[disabled] .navbar-inverse .btn-link:focus {
   padding-bottom: 30px;
   margin-bottom: 30px;
   color: #ffffff;
-  background-color: #4caf50;
+  background-color: #555;
 }
 .jumbotron h1,
 .jumbotron .h1 {
