Added a link to About. Fooled with colors on the index map.

--- a/css/custom-styles.css
+++ b/css/custom-styles.css
@@ -45,22 +45,22 @@
 }
 
 #north_america:active {
-	fill: #A5D6A7;
+	fill: #C5E1A5;
 }
 #south_america:active {
-	fill: #A5D6A7;
+	fill: #C5E1A5;
 }
 #africa:active {
-	fill: #A5D6A7;
+	fill: #C5E1A5;
 }
 #asia:active {
-	fill: #A5D6A7;
+	fill: #C5E1A5;
 }
 #australia:active {
-	fill: #A5D6A7;
+	fill: #C5E1A5;
 }
 #europe:active {
-	fill: #A5D6A7;
+	fill: #C5E1A5;
 }
 
 /* Jumbotron
