removed SVG from Africa.html added googlemap to Africa.html added javascript for googlemaps api

--- a/css/custom-styles.css
+++ b/css/custom-styles.css
@@ -2,6 +2,7 @@
 
 
 
+
 /* Typography
 ========================= */
 
@@ -41,6 +42,15 @@
 #europe:active {
 	fill: #C5E1A5;
 }
+
+/* Region Map
+========================= */
+
+#regionMap {
+  		width: 500px;
+  		height: 400px;
+  		background-color: #ccc;
+  	}
 
 
 /* Jumbotron
