--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -1569,7 +1569,7 @@ address {
   padding-left: 15px;
   padding-right: 15px;
 }
-.col-xxs-1, .col-xxs-2, .col-xxs-3, .col-xxs-4, .col-xxs-5, .col-xxs-6, .col-xxs-7, .col-xxs-8, .col-xxs-9, .col-xxs-10, .col-xxs-11, .col-xxs-12 {
+@media (max-width: 559px) {.col-xxs-1, .col-xxs-2, .col-xxs-3, .col-xxs-4, .col-xxs-5, .col-xxs-6, .col-xxs-7, .col-xxs-8, .col-xxs-9, .col-xxs-10, .col-xxs-11, .col-xxs-12 {
   float: left;
 }
 .col-xxs-12 {
@@ -1725,7 +1725,7 @@ address {
 .col-xxs-offset-0 {
   margin-left: 0%;
 }
-
+}
 @media (min-width: 560px) {
   .col-xs-1, .col-xs-2, .col-xs-3, .col-xs-4, .col-xs-5, .col-xs-6, .col-xs-7, .col-xs-8, .col-xs-9, .col-xs-10, .col-xs-11, .col-xs-12 {
   float: left;
@@ -4933,22 +4933,22 @@ button.close {
     display: table-cell !important;
   }
 }
-@media (max-width: 767px) {
+@media (max-width: 559px) {
   .visible-xxs-block {
     display: block !important;
   }
 }
-@media (max-width: 767px) {
+@media (max-width: 559px) {
   .visible-xxs-inline {
     display: inline !important;
   }
 }
-@media (max-width: 767px) {
+@media (max-width: 559px) {
   .visible-xxs-inline-block {
     display: inline-block !important;
   }
 }
-@media (max-width: 767px) {
+@media (min-width: 560px) and (max-width: 767px) {
   .visible-xs {
     display: block !important;
   }
@@ -4963,17 +4963,17 @@ button.close {
     display: table-cell !important;
   }
 }
-@media (max-width: 767px) {
+@media (min-width: 560px) and (max-width: 767px) {
   .visible-xs-block {
     display: block !important;
   }
 }
-@media (max-width: 767px) {
+@media (min-width: 560px) and (max-width: 767px) {
   .visible-xs-inline {
     display: inline !important;
   }
 }
-@media (max-width: 767px) {
+@media (min-width: 560px) and (max-width: 767px) {
   .visible-xs-inline-block {
     display: inline-block !important;
   }
@@ -5073,7 +5073,7 @@ button.close {
     display: none !important;
   }
 }
-@media (max-width: 767px) {
+@media (min-width: 560px) and (max-width: 767px) {
   .hidden-xs {
     display: none !important;
   }
