Added svg map to asia added "size-checker.php" to help see the sizes of pages. Not added to many.

--- a/css/custom-styles.css
+++ b/css/custom-styles.css
@@ -1,5 +1,7 @@
 /*I'm gonna add custom stuff in here. It's gonna melt your eyeballs*/
-
+.size-checker {
+	display: none;
+}
 
 /* Typography
 ========================= */
