--- a/css/custom-styles.css
+++ b/css/custom-styles.css
@@ -34,6 +34,8 @@
 
 }
 
+
+
 #regionMap {
   		width: 500px;
   		height: 400px;
@@ -66,6 +68,10 @@
 
 .regionRow {
 	padding-bottom: 40px;
+}
+
+@media (max-width: 559px) {
+	
 }
 
 @media (max-width: 767px) {
