--- a/css/custom-styles.css
+++ b/css/custom-styles.css
@@ -1,8 +1,8 @@
 /*I'm gonna add custom stuff in here. It's gonna melt your eyeballs*/
-.size-checker {
+/*.size-checker {
 	display: none;
 }
-
+*/
 /* Typography
 ========================= */
 
