making the footer stick at the bottom

--- a/css/custom-styles.css
+++ b/css/custom-styles.css
@@ -19,6 +19,9 @@
 .footer-text {
 	text-align: center;
 }
+.footer-bottom {
+	position: absolute;
+}
 
 /* Logos, etc.
 ========================= */
