--- a/css/custom-styles.css
+++ b/css/custom-styles.css
@@ -13,6 +13,10 @@
 	font-weight: bold;
 }
 
+body {
+	margin-bottom: 60px;
+}
+
 .navbar-text {
 	font-size: 16px;
 }
@@ -21,6 +25,17 @@
 }
 .footer-bottom {
 	position: absolute;
+    bottom: 0;
+	width: 100%;
+  /* Set the fixed height of the footer here */
+	height: 130px;
+}
+.footer-very-bottom {
+	position: absolute;
+    bottom: 0;
+	width: 100%;
+  /* Set the fixed height of the footer here */
+	height: 10px;
 }
 
 /* Logos, etc.
