--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -4360,7 +4360,7 @@ a.thumbnail.active {
 }
 .panel-footer {
   padding: 10px 15px;
-  background-color: #f5f5f5;
+  background-color: #555;
   border-top: 1px solid none;
   border-bottom-right-radius: 3px;
   border-bottom-left-radius: 3px;
