--- a/css/custom-styles.css
+++ b/css/custom-styles.css
@@ -25,10 +25,9 @@ body {
 }
 .footer-bottom {
 	position: absolute;
-    bottom: 0;
 	width: 100%;
 	height: 60px;
-	padding-bottom: 15%;
+	margin-bottom: 15px;
 	/*border-bottom: 10px solid #555;*/
 }
 
@@ -69,6 +68,9 @@ body {
 
 /* Layout
 ========================= */
+.content {
+	min-height: 600px;
+}
 .footer-container {
 	padding-top: 40px;
 	padding-bottom: 15px;
@@ -77,7 +79,7 @@ body {
 
 .footer-img {
 	margin: auto;
-	width: 50%;
+	width: 35%;
 }
 
 .regionColumns {
