--- a/css/custom-styles.css
+++ b/css/custom-styles.css
@@ -3,6 +3,13 @@
 	display: none;
 }
 */
+
+/* Email Add Event
+========================= */
+
+
+
+
 /* Typography
 ========================= */
 
@@ -27,7 +34,8 @@ body {
 	position: absolute;
 	width: 100%;
 	height: 60px;
-	margin-bottom: 15px;
+	padding-bottom: 100px;
+	padding-top: 60px;
 	/*border-bottom: 10px solid #555;*/
 }
 
