--- a/css/custom-styles.css
+++ b/css/custom-styles.css
@@ -27,15 +27,17 @@ body {
 .navbar-text {
 	font-size: 16px;
 }
-.footer-text {
-	text-align: center;
+.footer-top {
+	position: relative;
+	/*height: 60px;
+	padding-bottom: 100px;*/
+	padding-top: 60px;
 }
+
 .footer-bottom {
 	position: absolute;
 	width: 100%;
-	height: 60px;
-	padding-bottom: 100px;
-	padding-top: 60px;
+	
 	/*border-bottom: 10px solid #555;*/
 }
 
@@ -46,8 +48,8 @@ body {
 /* Region Map
 ========================= */
 
+/*temporary mapbox*/
 .africaMap {
-	/*temporary mapbox*/
 	border-style: solid;
 	border-width: 1px;
 
