--- a/css/custom-styles.css
+++ b/css/custom-styles.css
@@ -27,19 +27,6 @@ body {
 .navbar-text {
 	font-size: 16px;
 }
-.footer-top {
-	position: relative;
-	/*height: 60px;
-	padding-bottom: 100px;*/
-	padding-top: 60px;
-}
-
-.footer-bottom {
-	position: absolute;
-	width: 100%;
-	
-	/*border-bottom: 10px solid #555;*/
-}
 
 /* Logos, etc.
 ========================= */
@@ -91,6 +78,19 @@ body {
 	margin: auto;
 	width: 35%;
 }
+.footer-top {
+	position: relative;
+	padding-bottom: 1em;
+	padding-top: 60px;
+}
+
+.footer-bottom {
+	position: absolute;
+	width: 100%;
+	
+	/*border-bottom: 10px solid #555;*/
+}
+
 
 .regionColumns {
 	padding-bottom: 5px;
