--- a/css/custom-styles.css
+++ b/css/custom-styles.css
@@ -68,6 +68,7 @@ body {
 .content {
 	min-height: 600px;
 }
+
 .footer-container {
 	padding-top: 40px;
 	padding-bottom: 15px;
@@ -77,8 +78,7 @@ body {
 .footer-fleur-top,
 .footer-fleur-bottom {
 	margin: auto;
-	width: 40%;
-
+	max-width: 6em;
 }
 .footer-top {
 	position: relative;
@@ -103,7 +103,7 @@ body {
 }
 
 @media (max-width: 559px) {
-	.footer-fleur-bottom:  ;
+
 }
 
 @media (min-width: 560px) and (max-width: 767px) {
@@ -122,9 +122,7 @@ body {
 	.jumbotron {
 		padding-top: 50px;
 	}
-	.footer-fleur-top {
-		;
-	}
+	
 }
 
 @media (min-width: 768px) and (max-width: 991px) {
@@ -135,17 +133,17 @@ body {
 	.jumbotron .h1 {
 		font-size: 48px;
 	}
-	.footer-fleur-top {
-
-	}
 }
 @media (min-width: 992px) and (max-width: 1199) {
-	
+	.footer-fleur-top {
+		width: 10em;
+	}
 }
 @media (min-width: 1200px) {
 	.jumbotron h1 {
 		font-size: 63px;
 	}
+
 }
 
 
