added top padding

--- a/css/custom-styles.css
+++ b/css/custom-styles.css
@@ -79,7 +79,7 @@ body {
 .footer-fleur-bottom {
 	margin: auto;
 	max-width: 6em;
-	padding-bottom: 1em;
+	padding: 1em 0;
 }
 .footer-top {
 	position: relative;
