--- a/css/custom-styles.css
+++ b/css/custom-styles.css
@@ -93,7 +93,6 @@ body {
 	margin-bottom: 
 }
 
-
 .regionColumns {
 	padding-bottom: 5px;
 }
@@ -103,17 +102,17 @@ body {
 }
 
 @media (max-width: 559px) {
-
+	
 }
 
 @media (min-width: 560px) and (max-width: 767px) {
 	.mainMapSVG	{
 		padding-top: 30px;
 	}
-	.navbar {
+/*	.navbar {
 		max-height: 60px;
 		min-height: 30px;		
-	}
+*/	}
 	.navbar-text {
 		font-size: 16px;
 		margin-top: 20px;
