--- a/css/custom-styles.css
+++ b/css/custom-styles.css
@@ -113,11 +113,11 @@ body {
 		max-height: 60px;
 		min-height: 30px;		
 */	}
-	.navbar-text {
+	/*.navbar-text {
 		font-size: 16px;
 		margin-top: 20px;
 		margin-bottom: 20px;
-	}
+	*/}
 	.jumbotron {
 		padding-top: 50px;
 	}
