--- a/css/custom-styles.css
+++ b/css/custom-styles.css
@@ -51,9 +51,9 @@ body {
 
 /* Jumbotron
 ========================= */
-.jumbotron {
+/*.jumbotron {
 	padding-top: 100px;
-}
+}*/
 
 /*@media (max-width: 559px) {
 	.world-map-BG {
