--- a/css/custom-styles.css
+++ b/css/custom-styles.css
@@ -118,9 +118,9 @@ body {
 		margin-top: 20px;
 		margin-bottom: 20px;
 	*/}
-	.jumbotron {
+	/*.jumbotron {
 		padding-top: 50px;
-	}
+	*/}
 	
 }
 
