navbar=no bottom margin!

--- a/css/custom-styles.css
+++ b/css/custom-styles.css
@@ -28,9 +28,6 @@ body {
 	font-size: 16px;
 }
 
-/* Logos, etc.
-========================= */
-
 
 /* Region Map
 ========================= */
@@ -39,7 +36,6 @@ body {
 .africaMap {
 	border-style: solid;
 	border-width: 1px;
-
 }
 
 #regionMap {
@@ -51,24 +47,16 @@ body {
 
 /* Jumbotron
 ========================= */
-/*.jumbotron {
-	padding-top: 100px;
-}*/
 
-/*@media (max-width: 559px) {
-	.world-map-BG {
-		background-image: url("/var/www/missionslouisville.org/public_html/ammap/maps/svg/continentsLow.svg");
-		background-repeat: no-repeat;
-		background-size: cover;
-	}
-}*/
 
-/* Layout
+/* Navbar
 ========================= */
-.content {
-	min-height: 600px;
+.navbar {
+	margin-bottom: none,
 }
 
+/* Footer
+========================= */
 .footer-container {
 	padding-top: 40px;
 	padding-bottom: 15px;
@@ -90,9 +78,14 @@ body {
 .footer-bottom {
 	position: absolute;
 	width: 100%;
-	margin-bottom: 
 }
 
+
+/* Layout
+========================= */
+.content {
+	min-height: 600px;
+}
 .regionColumns {
 	padding-bottom: 5px;
 }
@@ -108,20 +101,7 @@ body {
 @media (min-width: 560px) and (max-width: 767px) {
 	.mainMapSVG	{
 		padding-top: 30px;
-	}
-/*	.navbar {
-		max-height: 60px;
-		min-height: 30px;		
-*/	}
-	/*.navbar-text {
-		font-size: 16px;
-		margin-top: 20px;
-		margin-bottom: 20px;
-	*/}
-	/*.jumbotron {
-		padding-top: 50px;
-	*/}
-	
+	}	
 }
 
 @media (min-width: 768px) and (max-width: 991px) {
