a tiny change to the footer to help differentiate at smaller sizes

--- a/css/custom-styles.css
+++ b/css/custom-styles.css
@@ -56,6 +56,11 @@ body {
 
 /* Footer
 ========================= */
+@media (max-width: 767px) {
+	.left-footer {
+		border-bottom: 1px solid #ccc;
+	}
+}
 .footer-container {
 	padding-top: 40px;
 	padding-bottom: 15px;
