--- a/css/custom-styles.css
+++ b/css/custom-styles.css
@@ -60,6 +60,9 @@ body {
 	.left-footer {
 		border-bottom: 1px solid #ccc;
 	}
+	.right-footer {
+		padding-top: 1em;
+	}
 }
 .footer-container {
 	padding-top: 40px;
