trying out a new font.

--- a/css/custom-styles.css
+++ b/css/custom-styles.css
@@ -3,6 +3,14 @@
 }
 */
 
+h1, h2{
+	font-family: 'News Cycle', sans-serif;	
+}
+
+
+
+font-family: 'Quattrocento Sans', sans-serif;
+
 /* Email Add Event
 ========================= */
 
