--- a/css/custom-styles.css
+++ b/css/custom-styles.css
@@ -9,13 +9,8 @@ h1, h2 {
 }
 
 
-
-
-
 /* Email Add Event
 ========================= */
-
-
 
 
 /* Typography
@@ -90,7 +85,6 @@ body {
 	padding-top: 60px;
 	padding-bottom: 2em;
 }
-
 .footer-bottom {
 	position: absolute;
 	width: 100%;
@@ -105,21 +99,17 @@ body {
 .regionColumns {
 	padding-bottom: 5px;
 }
-
 .regionRow {
 	padding-bottom: 40px;
 }
-
-@media (max-width: 559px) {
-	
+/*@media (max-width: 559px) {	
 }
-
+*/
 @media (min-width: 560px) and (max-width: 767px) {
 	.mainMapSVG	{
 		padding-top: 30px;
 	}	
 }
-
 @media (min-width: 768px) and (max-width: 991px) {
 	.mainMapSVG	{
 		padding-top: 40px;
@@ -140,7 +130,6 @@ body {
 	}
 
 }
-
 
 
 /* SVG Maps
