--- a/css/custom-styles.css
+++ b/css/custom-styles.css
@@ -7,6 +7,10 @@ h1, h2 {
 	/*font-family: 'News Cycle', sans-serif;*/
 	font-family: 'Quattrocento Sans', sans-serif;
 }
+p, {
+	font-family: 'News Cycle', sans-serif;
+}
+
 
 
 /* Email Add Event
