--- a/css/custom-styles.css
+++ b/css/custom-styles.css
@@ -56,12 +56,12 @@ body {
 .navbar {
 	margin-bottom: 0;
 }
-.navbar-left,{
+/*.navbar-left,{
 	float: left !important;
 }
 .navbar-right,{
 	float: right !important;
-}
+}*/
 
 /* Footer
 ========================= */
@@ -107,13 +107,19 @@ body {
 .regionRow {
 	padding-bottom: 40px;
 }
-/*@media (max-width: 559px) {	
+@media (max-width: 559px) {	
+	.navbar-text {
+		padding-top: 1em;
+	}
 }
-*/
+
 @media (min-width: 560px) and (max-width: 767px) {
 	.mainMapSVG	{
 		padding-top: 30px;
 	}	
+	.navbar-text {
+		padding-top: 1em;
+	}
 }
 @media (min-width: 768px) and (max-width: 991px) {
 	.mainMapSVG	{
