--- a/css/custom-styles.css
+++ b/css/custom-styles.css
@@ -1,33 +1,26 @@
-h1, {
+h1 {
 	font-family: 'News Cycle', sans-serif;
 	font-weight: bold;
 }
-p, {
-	font-family: 'Quattrocento Sans', sans-serif;
+p, a {
+	font-family: 'Arial', sans-serif;
+}
+a {
+	text-decoration: none;
 }
 
 
-
-/* Email Add Event
-========================= */
 
 
 /* Typography
 ========================= */
-
-/*.logo-text {
-	text-decoration: none;
-	font-family: helvetica, arial;
-	font-size: 1em;
-	font-weight: bold;
-}*/
-
 body {
 	margin-bottom: 60px;
 }
 
 .navbar-text {
 	font-size: 16px;
+	font-family: 'News Cycle'
 }
 
 
