--- a/css/custom-styles.css
+++ b/css/custom-styles.css
@@ -105,12 +105,14 @@ body {
 }
 
 @media (min-width: 560px) and (max-width: 767px) {
-	.mainMapSVG	{
+	.mainMapSVG,
+	.regionMap	{
 		padding-top: 30px;
 	}	
 }
 @media (min-width: 768px) and (max-width: 991px) {
-	.mainMapSVG	{
+	.mainMapSVG,
+	.regionMap	{
 		padding-top: 40px;
 	}
 	.jumbotron h1, 
