adjusted the footer a little by adding some bigger fonts. ems baby! Also started working on the events.php. Here's hoping.

--- a/css/custom-styles.css
+++ b/css/custom-styles.css
@@ -23,6 +23,11 @@ body {
 	font-family: 'News Cycle'
 }
 
+.footer-text {
+	font-size: 1.3em;
+
+}
+
 
 /* Region Map
 ========================= */
@@ -31,12 +36,6 @@ body {
 .africaMap {
 	border-style: solid;
 	border-width: 1px;
-}
-
-#regionMap {
-	width: 500px;
-	height: 400px;
-	background-color: #ccc;
 }
 
 
