turned off the region map box

--- a/css/custom-styles.css
+++ b/css/custom-styles.css
@@ -33,10 +33,10 @@ body {
 ========================= */
 
 /*temporary mapbox*/
-.africaMap {
+/*.africaMap {
 	border-style: solid;
 	border-width: 1px;
-}
+}*/
 
 
 /* Jumbotron
