--- a/css/custom-styles.css
+++ b/css/custom-styles.css
@@ -24,10 +24,6 @@ body {
 	font-size: 1.3em;
 }
 
-.event-headings {
-	font-style: bold;
-}
-
 /* Event Forms
 ========================= */
 .event-form {
@@ -109,8 +105,7 @@ body {
 	.regionMap	{
 		padding-top: 40px;
 	}
-	.jumbotron h1, 
-	.jumbotron .h1 {
+	.h1 {
 		font-size: 48px;
 	}
 }
@@ -120,7 +115,7 @@ body {
 	}
 }
 @media (min-width: 1200px) {
-	.jumbotron h1 {
+	.h1 {
 		font-size: 63px;
 	}
 
@@ -129,6 +124,10 @@ body {
 
 /* SVG Maps
 ========================= */
+
+#BF, #AL, #IN, #PE, #PY, #UA, #GT, #NI, #MA, #PG, #FJ {
+	fill: #64B5F6;
+}
 
 #north_america:hover, #south_america:hover, #africa:hover, #asia:hover, #australia:hover, #europe:hover, #AE:hover, #AF:hover, #AL:hover, #AM:hover, #AO:hover, #AR:hover, #AT:hover, #AU:hover, #AZ:hover, #BF:hover, #BG:hover, #BI:hover, #BJ:hover, #BN:hover, #BO:hover, #BR:hover, #BS:hover, #BT:hover, #BW:hover, #BY:hover, #BZ:hover, #CA:hover, #CD:hover, #CF:hover, #CG:hover, #CH:hover, #CI:hover, #CL:hover, #CM:hover, #CN:hover, #CO:hover, #CR:hover, #CU:hover, #CY:hover, #CZ:hover, #DE:hover, #DJ:hover, #DK:hover, #DO:hover, #DZ:hover, #EC:hover, #EE:hover, #EG:hover, #EH:hover, #ER:hover, #ES:hover, #ET:hover, #FK:hover, #FI:hover, #FJ:hover, #FR:hover, #GA:hover, #GB:hover, #GE:hover, #GF:hover, #GH:hover, #GL:hover, #GM:hover, #GN:hover, #GQ:hover, #GR:hover, #GT:hover, #GW:hover, #GY:hover, #HN:hover, #HR:hover, #HT:hover, #HU:hover, #ID:hover, #IE:hover, #IL:hover, #IN:hover, #IQ:hover, #IR:hover, #IS:hover, #IT:hover, #JM:hover, #JO:hover, #JP:hover, #KE:hover, #KG:hover, #KH:hover, #KP:hover, #KR:hover, #XK:hover, #KW:hover, #KZ:hover, #LA:hover, #LB:hover, #LK:hover, #LR:hover, #LS:hover, #LT:hover, #LU:hover, #LV:hover, #LY:hover, #MA:hover, #MD:hover, #ME:hover, #MG:hover, #MK:hover, #ML:hover, #MM:hover, #MN:hover, #MR:hover, #MW:hover, #MX:hover, #MY:hover, #MZ:hover, #NA:hover, #NC:hover, #NE:hover, #NG:hover, #NI:hover, #NL:hover, #NO:hover, #NP:hover, #NZ:hover, #OM:hover, #PA:hover, #PE:hover, #PG:hover, #PH:hover, #PL:hover, #PK:hover, #PR:hover, #PS:hover, #PT:hover, #PY:hover, #QA:hover, #RO:hover, #RS:hover, #RU:hover, #RW:hover, #SA:hover, #SB:hover, #SD:hover, #SE:hover, #SI:hover, #SJ:hover, #SK:hover, #SL:hover, #SN:hover, #SO:hover, #SR:hover, #SS:hover, #SV:hover, #SY:hover, #SZ:hover, #TD:hover, #TF:hover, #TG:hover, #TH:hover, #TJ:hover, #TL:hover, #TM:hover, #TN:hover, #TR:hover, #TT:hover, #TW:hover, #TZ:hover, #UA:hover, #UG:hover, #US:hover, #UY:hover, #UZ:hover, #VE:hover, #VN:hover, #VU:hover, #YE:hover, #ZA:hover, #ZM:hover, #ZW:hover 
 {
