--- a/css/custom-styles.css
+++ b/css/custom-styles.css
@@ -68,13 +68,20 @@ body {
 	max-width: 6em;
 	padding: 1em 0;
 }
-.fillFDL {
+.footer-fleur-bottom {
 	fill: #CCCCCC;
 	fill-opacity: 0.3;
 	stroke: #CCCCCC;
 	stroke-opacity: 0.9;
 	stroke-width: 3;
 }
+.footer-fleur-top {
+	fill: #555555;
+	fill-opacity: 0.3;
+	stroke: #CCCCCC;
+	stroke-opacity: 0.9;
+	stroke-width: 3;
+}*/
 .footer-top {
 	position: relative;
 	padding-top: 60px;
