--- a/css/custom-styles.css
+++ b/css/custom-styles.css
@@ -52,14 +52,15 @@ body {
 	}
 }
 
-.center-footer {
-	padding-left: 0;
-	padding-right: 0;
-}
-.footer-container {
+/*.footer-container {
 	padding-top: 40px;
 	padding-bottom: 15px;
 	height: auto;
+}
+*/
+.center-footer {
+	padding-left: 0;
+	padding-right: 0;
 }
 .footer-fleur-top,
 .footer-fleur-bottom {
@@ -103,8 +104,12 @@ body {
 .regionRow {
 	padding-bottom: 40px;
 }
-@media (max-width: 559px) {	
-	
+@media (max-width: 767px) {	
+	.footer-container {
+		padding-top: 40px;
+		padding-bottom: 15px;
+		height: auto;
+	}
 }
 
 @media (min-width: 560px) and (max-width: 767px) {
