--- a/css/custom-styles.css
+++ b/css/custom-styles.css
@@ -70,9 +70,9 @@ body {
 }
 .footer-fleur-top {
 	fill: #CCCCCC;
-	fill-opacity: 0.4;
-	stroke: #555555;
-	stroke-opacity: 0.9;
+	fill-opacity: 0.5;
+	stroke: #AAAAAA;
+	stroke-opacity: 1;
 	stroke-width: 3;
 }
 .footer-top {
