succesfully implemented ng-cloak. though I keep wanting to spell it cloack...

--- a/css/custom-styles.css
+++ b/css/custom-styles.css
@@ -88,6 +88,11 @@ body {
 
 /* Layout
 ========================= */
+
+[ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
+  display: none !important;
+}
+
 .content {
 	min-height: 600px;
 }
