testing highlight css outside of svg

--- a/css/custom-styles.css
+++ b/css/custom-styles.css
@@ -141,6 +141,10 @@ body {
 /* SVG Maps
 ========================= */
 
+.highlight{
+	fill: #64B5F6;
+}
+
 #BF, #AL, #IN, #PE, #PY, #UA, #GT, #NI, #MA, #PG, #FJ 
 {
 	fill: #64B5F6;
