--- a/css/custom-styles.css
+++ b/css/custom-styles.css
@@ -141,6 +141,14 @@ body {
 /* SVG Maps
 ========================= */
 
+.land {
+	fill: #CCCCCC;
+	fill-opacity: 1;
+	stroke: white;
+	stroke-opacity: 1;
+	stroke-width:0.5;
+}
+
 .highlight{
 	fill: #64B5F6;
 }
